Multiple snap targets don't work when Increment is enabled in snapping options #72094

Closed
opened 2019-12-01 18:35:59 +01:00 by Stanislav Blinov · 6 comments

Broken: 2.81, 2.82

Short description of error
When using mixed snapping, multiple snap targets don't seem to work if Increment is one of the snapping options. The manual doesn't specify any restrictions here, so if it's by design it probably should mention that.

Exact steps for others to reproduce the error

  1. Load the default scene.
  2. Enable snapping, with Increment, Vertex, and Face
  3. Try moving the Camera object and adding snap targets - they will not be added
  4. Disable Increment in snapping options
  5. Try moving the camera and adding snap targets - they will be added
Broken: 2.81, 2.82 **Short description of error** When using mixed snapping, multiple snap targets don't seem to work if Increment is one of the snapping options. The manual doesn't specify any restrictions here, so if it's by design it probably should mention that. **Exact steps for others to reproduce the error** 1. Load the default scene. 2. Enable snapping, with Increment, Vertex, and Face 3. Try moving the Camera object and adding snap targets - they will not be added 4. Disable Increment in snapping options 5. Try moving the camera and adding snap targets - they will be added

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Added subscriber: @AnthonyEdlin

Added subscriber: @AnthonyEdlin

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2019-12-03 17:31:28 +01:00

This limitation seems to have been intentionally added in 881cc17f.
This change would be enough.

diff --git a/source/blender/editors/transform/transform.c b/source/blender/editors/transform/transform.c
index 74fc1406795..0645f8ae4b6 100644
--- a/source/blender/editors/transform/transform.c
+++ b/source/blender/editors/transform/transform.c
@@ -855,9 +855,6 @@ static bool transform_modal_item_poll(const wmOperator *op, int value)
       if (t->spacetype != SPACE_VIEW3D) {
         return false;
       }
-      else if (t->tsnap.mode & (SCE_SNAP_MODE_INCREMENT | SCE_SNAP_MODE_GRID)) {
-        return false;
-      }
       else if (!validSnap(t)) {
         return false;
       }

@ideasman42, what do you think?

This limitation seems to have been intentionally added in 881cc17f. This change would be enough. ``` diff --git a/source/blender/editors/transform/transform.c b/source/blender/editors/transform/transform.c index 74fc1406795..0645f8ae4b6 100644 --- a/source/blender/editors/transform/transform.c +++ b/source/blender/editors/transform/transform.c @@ -855,9 +855,6 @@ static bool transform_modal_item_poll(const wmOperator *op, int value) if (t->spacetype != SPACE_VIEW3D) { return false; } - else if (t->tsnap.mode & (SCE_SNAP_MODE_INCREMENT | SCE_SNAP_MODE_GRID)) { - return false; - } else if (!validSnap(t)) { return false; } ``` @ideasman42, what do you think?

This issue was referenced by 389fc62f6c

This issue was referenced by 389fc62f6c4e039902c94c3da36fd24a351c8a8d

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72094
No description provided.